# termodoro

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
src/: config.rs  domain.rs  engine.rs  lib.rs  main.rs  persistence.rs
