[package]
name = "terminal-pomodore"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.0"
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["signal", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
