[package]
name = "termodoro" # Debe ser único en crates.io
version = "0.1.4"
authors = ["int_64 <carlosr301101@gmail.com>"]
edition = "2024"
description = "Terminal Pomodoro (termodoro) is an nice widget for terminals and help to improve your concentration and focus on activities."
license = "MIT" # O la licencia que prefieras
repository = "https://github.com/carlosr301101/termodoro"
readme = "README.md"
homepage = "https://github.com/carlosr301101/termodoro"
keywords = ["cli", "terminal"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.0"
dirs = "6.0.0"
nix = { version = "0.31.2", features = ["signal", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
